--- a/package.json
+++ b/package.json
@@ -3,8 +3,12 @@
   "version": "0.0.1",
   "description": "a cli for umi-max",
   "main": "index.js",
+  "bin": {
+    "ww": "./bin/ww.js"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "rollup --config ./config/rollup.config.js"
   },
   "repository": {
     "type": "git",
@@ -21,5 +25,24 @@
   "bugs": {
     "url": "https://github.com/hedongjie123/ww-cli/issues"
   },
-  "homepage": "https://github.com/hedongjie123/ww-cli#readme"
+  "homepage": "https://github.com/hedongjie123/ww-cli#readme",
+  "dependencies": {
+    "@babel/core": "^7.18.9",
+    "@babel/plugin-transform-runtime": "^7.18.9",
+    "@types/inquirer": "^8.2.1",
+    "commander": "^9.4.0",
+    "inquirer": "6.0.0"
+  },
+  "devDependencies": {
+    "@babel/plugin-proposal-class-properties": "^7.18.6",
+    "@babel/preset-env": "^7.18.9",
+    "@rollup/plugin-babel": "^5.3.1",
+    "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-node-resolve": "^13.3.0",
+    "rollup": "^2.77.0",
+    "rollup-plugin-clear": "^2.0.7",
+    "rollup-plugin-typescript2": "^0.32.1",
+    "typescript": "^4.7.4",
+    "vue-cli": "^2.9.6"
+  }
 }
