--- a/package.json
+++ b/package.json
@@ -30,14 +30,18 @@
     "@babel/core": "^7.18.9",
     "@babel/plugin-transform-runtime": "^7.18.9",
     "@types/inquirer": "^8.2.1",
+    "chalk": "2.1.0",
     "commander": "^9.4.0",
-    "inquirer": "6.0.0"
+    "download-git-repo": "^3.0.2",
+    "inquirer": "6.0.0",
+    "ora": "1.3.0"
   },
   "devDependencies": {
     "@babel/plugin-proposal-class-properties": "^7.18.6",
     "@babel/preset-env": "^7.18.9",
     "@rollup/plugin-babel": "^5.3.1",
     "@rollup/plugin-commonjs": "^22.0.1",
+    "@rollup/plugin-json": "^4.1.0",
     "@rollup/plugin-node-resolve": "^13.3.0",
     "rollup": "^2.77.0",
     "rollup-plugin-clear": "^2.0.7",
