--- a/tmp-admin/.gitignore
+++ b/tmp-admin/.gitignore
@@ -6,8 +6,7 @@
 /src/utils/request-temp.js
 _roadhog-api-doc
 # production
-/bin
-/lib
+/dist
 /.vscode
 
 # misc
@@ -34,4 +33,4 @@ functions/*
 screenshot
 .firebase
 .eslintcache
-tmp
+build
