--- a/package.json
+++ b/package.json
@@ -1,52 +1,69 @@
 {
-  "name": "ww-cli",
-  "version": "0.0.1",
-  "description": "a cli for umi-max",
-  "main": "index.js",
-  "bin": {
-    "ww": "./bin/ww.js"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "rollup --config ./config/rollup.config.js"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/hedongjie123/ww-cli.git"
-  },
-  "keywords": [
-    "ww-cli",
-    "umi",
-    "react",
-    "vue"
-  ],
-  "author": "hw",
-  "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/hedongjie123/ww-cli/issues"
-  },
-  "homepage": "https://github.com/hedongjie123/ww-cli#readme",
-  "dependencies": {
-    "@babel/core": "^7.18.9",
-    "@babel/plugin-transform-runtime": "^7.18.9",
-    "@types/inquirer": "^8.2.1",
-    "chalk": "2.1.0",
-    "commander": "^9.4.0",
-    "download-git-repo": "^3.0.2",
-    "inquirer": "6.0.0",
-    "ora": "1.3.0"
-  },
-  "devDependencies": {
-    "@babel/plugin-proposal-class-properties": "^7.18.6",
-    "@babel/preset-env": "^7.18.9",
-    "@rollup/plugin-babel": "^5.3.1",
-    "@rollup/plugin-commonjs": "^22.0.1",
-    "@rollup/plugin-json": "^4.1.0",
-    "@rollup/plugin-node-resolve": "^13.3.0",
-    "rollup": "^2.77.0",
-    "rollup-plugin-clear": "^2.0.7",
-    "rollup-plugin-typescript2": "^0.32.1",
-    "typescript": "^4.7.4",
-    "vue-cli": "^2.9.6"
-  }
+    "name": "ww-cli",
+    "version": "0.0.1",
+    "description": "a cli for umi-max",
+    "main": "index.js",
+    "bin": {
+        "ww": "./bin/ww.js"
+    },
+    "scripts": {
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "build": "rollup --config ./config/rollup.config.js",
+        "prepare": "husky install",
+        "lint:js": "eslint --cache --ext .js,.ts --format=pretty ./src"
+    },
+    "repository": {
+        "type": "git",
+        "url": "git+https://github.com/hedongjie123/ww-cli.git"
+    },
+    "lint-staged": {
+        "**/*.{js,ts}": "npm run lint:js",
+        "**/*.{js,ts,json}": [
+            "prettier --write"
+        ]
+    },
+    "keywords": [
+        "ww-cli",
+        "umi",
+        "react",
+        "vue"
+    ],
+    "author": "hw",
+    "license": "ISC",
+    "bugs": {
+        "url": "https://github.com/hedongjie123/ww-cli/issues"
+    },
+    "homepage": "https://github.com/hedongjie123/ww-cli#readme",
+    "dependencies": {
+        "@babel/core": "^7.18.9",
+        "@babel/plugin-transform-runtime": "^7.18.9",
+        "@types/inquirer": "^8.2.1",
+        "chalk": "2.1.0",
+        "commander": "^9.4.0",
+        "download-git-repo": "^3.0.2",
+        "inquirer": "6.0.0",
+        "ora": "1.3.0"
+    },
+    "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.18.6",
+        "@babel/preset-env": "^7.18.9",
+        "@rollup/plugin-babel": "^5.3.1",
+        "@rollup/plugin-commonjs": "^22.0.1",
+        "@rollup/plugin-json": "^4.1.0",
+        "@rollup/plugin-node-resolve": "^13.3.0",
+        "@typescript-eslint/eslint-plugin": "^5.31.0",
+        "@typescript-eslint/parser": "^5.31.0",
+        "eslint": "7.32.0",
+        "eslint-config-prettier": "^8.5.0",
+        "eslint-formatter-pretty": "^4.1.0",
+        "eslint-plugin-prettier": "^4.2.1",
+        "husky": "^8.0.1",
+        "lint-staged": "^13.0.3",
+        "prettier": "^2.7.1",
+        "rollup": "^2.77.0",
+        "rollup-plugin-clear": "^2.0.7",
+        "rollup-plugin-typescript2": "^0.32.1",
+        "typescript": "^4.7.4",
+        "vue-cli": "^2.9.6"
+    }
 }
